{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 36,
  "lineage": "407db08b-7d63-5dca-ebb4-a6f2d799dfd7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:653076675421:internet-gateway/igw-0e4d384fb00fbbc39",
            "id": "igw-0e4d384fb00fbbc39",
            "owner_id": "653076675421",
            "tags": {
              "Env": "dev",
              "Name": "ecs-sandbox-dev-igw",
              "Project": "ecs-sandbox"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ecs-sandbox-dev-igw",
              "Project": "ecs-sandbox"
            },
            "vpc_id": "vpc-06238fb0ef23487da"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_rt_igw_r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e4d384fb00fbbc39",
            "id": "r-rtb-06daea0e3de6e87fa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06daea0e3de6e87fa",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:653076675421:route-table/rtb-04db35bcc1cf44718",
            "id": "rtb-04db35bcc1cf44718",
            "owner_id": "653076675421",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "ecs-sandbox-dev-private-rt",
              "Project": "ecs-sandbox"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ecs-sandbox-dev-private-rt",
              "Project": "ecs-sandbox"
            },
            "timeouts": null,
            "vpc_id": "vpc-06238fb0ef23487da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:653076675421:route-table/rtb-06daea0e3de6e87fa",
            "id": "rtb-06daea0e3de6e87fa",
            "owner_id": "653076675421",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e4d384fb00fbbc39",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "ecs-sandbox-dev-public-rt",
              "Project": "ecs-sandbox"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ecs-sandbox-dev-public-rt",
              "Project": "ecs-sandbox"
            },
            "timeouts": null,
            "vpc_id": "vpc-06238fb0ef23487da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018ff0c367b1c9cb7",
            "route_table_id": "rtb-04db35bcc1cf44718",
            "subnet_id": "subnet-0cc961b6601d12e5a"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c79a2b908bc78fb4",
            "route_table_id": "rtb-04db35bcc1cf44718",
            "subnet_id": "subnet-0740c428750f29e4d"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07497b8d328db2361",
            "route_table_id": "rtb-06daea0e3de6e87fa",
            "subnet_id": "subnet-02acde72fcf61e5a1"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1226c7435fd92e5",
            "route_table_id": "rtb-06daea0e3de6e87fa",
            "subnet_id": "subnet-05508c688086678d6"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:653076675421:security-group/sg-0b3549bccef6ed657",
            "description": "alb security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0956a4110ce1b0aae"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0b3549bccef6ed657",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-sandbox-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "653076675421",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "ecs-sandbox-dev-alb-sg",
              "Project": "ecs-sandbox"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ecs-sandbox-dev-alb-sg",
              "Project": "ecs-sandbox"
            },
            "timeouts": null,
            "vpc_id": "vpc-06238fb0ef23487da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "containar_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:653076675421:security-group/sg-0956a4110ce1b0aae",
            "description": "containar security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09322d2e429105e46"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0956a4110ce1b0aae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-sandbox-dev-containar-sg",
            "name_prefix": "",
            "owner_id": "653076675421",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "ecs-sandbox-dev-containar-sg",
              "Project": "ecs-sandbox"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ecs-sandbox-dev-containar-sg",
              "Project": "ecs-sandbox"
            },
            "timeouts": null,
            "vpc_id": "vpc-06238fb0ef23487da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "privatelink-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:653076675421:security-group/sg-09322d2e429105e46",
            "description": "containar security group",
            "egress": [],
            "id": "sg-09322d2e429105e46",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0956a4110ce1b0aae"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ecs-sandbox-dev-privatelink-sg",
            "name_prefix": "",
            "owner_id": "653076675421",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "ecs-sandbox-dev-privatelink-sg",
              "Project": "ecs-sandbox"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ecs-sandbox-dev-privatelink-sg",
              "Project": "ecs-sandbox"
            },
            "timeouts": null,
            "vpc_id": "vpc-06238fb0ef23487da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_in_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2211409910",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b3549bccef6ed657",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_in_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-969464783",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b3549bccef6ed657",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_out_containar",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1882227256",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b3549bccef6ed657",
            "self": false,
            "source_security_group_id": "sg-0956a4110ce1b0aae",
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.containar_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "containar_in_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-4066785104",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0956a4110ce1b0aae",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.containar_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "containar_out_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 443,
            "id": "sgrule-628798212",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0956a4110ce1b0aae",
            "self": false,
            "source_security_group_id": "sg-09322d2e429105e46",
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.containar_sg",
            "aws_security_group.privatelink-sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "privatelink_in_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1281319562",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09322d2e429105e46",
            "self": false,
            "source_security_group_id": "sg-0956a4110ce1b0aae",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.containar_sg",
            "aws_security_group.privatelink-sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:653076675421:subnet/subnet-0cc961b6601d12e5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc961b6601d12e5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "653076675421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "ecs-sandbox-dev-private-subnet-1a",
              "Project": "ecs-sandbox"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ecs-sandbox-dev-private-subnet-1a",
              "Project": "ecs-sandbox"
            },
            "vpc_id": "vpc-06238fb0ef23487da"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:653076675421:subnet/subnet-0740c428750f29e4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0740c428750f29e4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "653076675421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "ecs-sandbox-dev-private-subnet-1c",
              "Project": "ecs-sandbox"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ecs-sandbox-dev-private-subnet-1c",
              "Project": "ecs-sandbox"
            },
            "vpc_id": "vpc-06238fb0ef23487da"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:653076675421:subnet/subnet-02acde72fcf61e5a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02acde72fcf61e5a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "653076675421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "ecs-sandbox-dev-public-subnet-1a",
              "Project": "ecs-sandbox"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ecs-sandbox-dev-public-subnet-1a",
              "Project": "ecs-sandbox"
            },
            "vpc_id": "vpc-06238fb0ef23487da"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:653076675421:subnet/subnet-05508c688086678d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05508c688086678d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "653076675421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "ecs-sandbox-dev-public-subnet-1c",
              "Project": "ecs-sandbox"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ecs-sandbox-dev-public-subnet-1c",
              "Project": "ecs-sandbox"
            },
            "vpc_id": "vpc-06238fb0ef23487da"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:653076675421:vpc/vpc-06238fb0ef23487da",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08127b537ee3ebeaf",
            "default_route_table_id": "rtb-09ed9764e54690e4b",
            "default_security_group_id": "sg-046929a7ee81f5bfc",
            "dhcp_options_id": "dopt-0aba5d6c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06238fb0ef23487da",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09ed9764e54690e4b",
            "owner_id": "653076675421",
            "tags": {
              "Env": "dev",
              "Name": "ecs-sandbox-dev-vpc",
              "Project": "ecs-sandbox"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ecs-sandbox-dev-vpc",
              "Project": "ecs-sandbox"
            }
          }
        }
      ]
    }
  ]
}